<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.medicalclinic2.MainActivity">
    <item
        android:id="@+id/profileview"
        android:orderInCategory="100"
        android:title="@string/profileview"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/register"
        android:orderInCategory="100"
        android:title="@string/register"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/login"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/appointments"
        android:orderInCategory="100"
        android:title="@string/action_appointments"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/doctors"
        android:orderInCategory="100"
        android:title="@string/action_doctors"
        app:showAsAction="never" />



</menu>